fix layout on mobile

--- a/src/all.css
+++ b/src/all.css
@@ -3,7 +3,6 @@ h1 {
   margin-top:100px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
-  margin-left: -5%;
   text-align: center;
 }
 
@@ -12,7 +11,6 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   position: static;
-  margin-left: 42%;
 }
 
 table {
@@ -44,7 +42,6 @@ table {
   text-decoration: none;
   top: auto;
   height: auto;
-  /* margin-left: 20%; */
 }
 
 .intro{
